Layout base emplementado

--- a/src/index.html
+++ b/src/index.html
@@ -26,13 +26,37 @@
     </section>
     <main>
         <section id="lista-destinos">
-
-
-            
+            <ul>
+                <li>
+                    
+                    <img src="../assets/images/destinos/centro.png" alt="Bairro Centro">
+                    <h2>Centro</h2>
+                    </li>
+                    <li>
+                        <img src="../assets/images/destinos/alameda.png" alt="Bairro Alameda">
+                        <h2>Alameda</h2>
+                    </li>
+                    <li>
+                        <img src="../assets/images/destinos/fortaleza.png" alt="Bairro Fortaleza">
+                        <h2>Fortaleza</h2>
+                    </li>
+                    <li>
+                        <img src="../assets/images/destinos/itoupava-norte.png" alt="Bairro Itoupava Norte">
+                        <h2>Itoupava Norte</h2>
+                    </li>
+                    <li>
+                        <img src="../assets/images/destinos/ponta-aguda.png" alt="Bairro Ponta Aguda">
+                        <h2>Ponta Aguda</h2>
+                    </li>
+                    <li>
+                        <img src="../assets/images/destinos/velha.png" alt="Bairro Velha">
+                        <h2>Velha</h2>
+                    </li>
+                    </ul>
         </section>
     </main>
     <footer>
-
+        <p>Todos os Direitos Reservados - Jorge Matheus©®℗™</p>
     </footer>
 </body>
 
